--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -349,7 +349,7 @@
                     {{ form.theme }} {{ form.themeDorO }}
                     <div class="help-text">
                             *默认设置:允许客户更改<br>
-                            *固化设置：不允许客户更改
+                            *固化设置：不允许客户更改<br><br>
             </div>
         </div>
         <div class="container">
