--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -348,7 +348,7 @@
                     <label for="{{ form.theme.id_for_label }}">主题:</label>
                     {{ form.theme }} {{ form.themeDorO }}
                     <div class="help-text">
-                            *默认设置:允许客户更改<br>
+                            *默认设置: 允许客户更改<br>
                             *固化设置：不允许客户更改<br><br>
             </div>
         </div>
@@ -389,22 +389,30 @@
                     {{ form.defaultManual }}<br><br>
                     <label for="{{ form.overrideManual.id_for_label }}"> 固化设置 </label><br>
                     {{ form.overrideManual }}<br><br>
+          </div>
             </div>
-        </div>
-        <div class="platform" style="text-align: center; margin: 30px 0;">
-            <div class="section">
-                <button type="submit"><i class="fas fa-rocket"></i> 构建客户端</button>
+            <div class="platform">
+                <div class="section">
+                    <button type="submit"><i class="fas fa-rocket"></i> Generate Custom Client</button>
+                </div>
             </div>
-        </div>
-        <div style="text-align: center; margin: 30px 0;">
-            <a href="https://github.com/sponsors/bryangerlach?o=esb"
-            target="_blank" 
-            class="sponsor-button">
-                <i class="fab fa-github"></i>
-                Donate
-            </a>
-        </div>
-    </form>
+            <div style="text-align: center; margin: 30px 0;">
+                <a href="https://github.com/bryangerlach/rdgen" 
+                target="_blank" 
+                class="sponsor-button">
+                    <i class="fab fa-github"></i>
+                    Source Code on Github
+                </a>
+            </div>
+            <div style="text-align: center; margin: 30px 0;">
+                <a href="https://github.com/sponsors/bryangerlach?o=esb"
+                target="_blank" 
+                class="sponsor-button">
+                    <i class="fab fa-github"></i>
+                    Donate
+                </a>
+            </div>
+        </form>
     <script>
         document.querySelectorAll('.platform-icon').forEach(icon => {
             icon.addEventListener('click', function() {
