--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>自定义客户端构建器</title>
+<title> 客户端构建器</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 <style>
@@ -228,11 +228,11 @@ color: #0095EA;
 <form id="myForm" action="/generator" method="post" enctype="multipart/form-data">
 <div class="save-load-section-container">
 <div class="section">
-<h2 id="saveLoadTitle">Save/Load Configuration <i class="fas fa-chevron-down"></i></h2>
+<h2 id="saveLoadTitle"> 保存/加载 <i class="fas fa-chevron-down"></i></h2>
 <div class="save-load-section">
-<button type="button" onclick="saveFormData()">Save Configuration</button>
+<button type="button" onclick="saveFormData()"> 保存 </button>
 <input type="file" id="fileInput" style="display:none;" accept=".json">
-<button type="button" onclick="loadFormData()">Load Configuration</button>
+<button type="button" onclick="loadFormData()"> 加载 </button>
 </div>
 </div>
 </div>
