--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -224,7 +224,7 @@ color: #0095EA;
 </style>
 </head>
 <body>
-<h1><i class="fas fa-cogs"></i> RustDesk Custom Client Builder</h1>
+<h1><i class="fas fa-cogs"></i> 客户端构建平台 </h1>
 <form id="myForm" action="/generator" method="post" enctype="multipart/form-data">
 <div class="save-load-section-container">
 <div class="section">
