--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -381,11 +381,11 @@ rel="noopener noreferrer" >点击此处查看可用的设置列表</a>
 
 <!-- 底部按钮：全宽 -->
 <div class="platform">
-<div class="section">
-<button type="submit" class="sponsor-button">
-    <i class="fas fa-rocket"></i> Generate Custom Client
-</button>
-</div>
+  <div class="section" style="text-align: center;">
+    <button type="submit" class="sponsor-button">
+      <i class="fas fa-rocket"></i> Generate Custom Client
+    </button>
+  </div>
 </div>
 
 <div style="text-align: center; margin: 30px 0;">
