--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -135,7 +135,7 @@ margin-top: 10px;
 .save-load-section-container {
 position: fixed;
 top: 20px;
-left: 20px;
+right: 20px;
 background-color: #111;
 padding: 0px;
 border-radius: 8px;
