--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -328,8 +328,8 @@ color: #0095EA;
 <label for="{{ form.theme.id_for_label }}">主题:</label>
 {{ form.theme }} {{ form.themeDorO }}
 <div class="help-text">
-*默认设置: 允许客户更改<br>
-*固化设置：不允许客户更改<br><br>
+*默认设置允许客户更改<br>
+*固化设置不允许客户更改<br><br>
 </div>
 </div>
 </div>
